--- a/camembert_test_on_tweet_cls_gpu+5-fold.html
+++ b/camembert_test_on_tweet_cls_gpu+5-fold.html
@@ -14459,7 +14459,7 @@ a.anchor-link {
             <span class="n">schedule_type</span><span class="o">=</span><span class="s2">&quot;warmup_cosine&quot;</span><span class="p">,</span>
             <span class="n">optimizer_type</span><span class="o">=</span><span class="s2">&quot;adamw&quot;</span><span class="p">)</span>
     <span class="c1"># validate the model </span>
-    <span class="n">loss</span><span class="p">,</span> <span class="n">fbeta_score</span><span class="p">,</span> <span class="n">roc_auc_score</span> <span class="o">=</span> <span class="n">cl_learner</span><span class="o">.</span><span class="n">validate</span><span class="p">()</span>
+    <span class="n">res</span> <span class="o">=</span> <span class="n">cl_learner</span><span class="o">.</span><span class="n">validate</span><span class="p">()</span>
 
     <span class="c1"># append model score</span>
     <span class="n">cl_learner</span><span class="o">.</span><span class="n">save_model</span><span class="p">()</span>
@@ -14480,8 +14480,11 @@ a.anchor-link {
     <span class="n">max_f1_recall</span> <span class="o">=</span> <span class="n">recall</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">argmax</span><span class="p">(</span><span class="n">f1_scores</span><span class="p">)]</span>
     <span class="n">accuracy</span> <span class="o">=</span> <span class="n">accuracy_score</span><span class="p">(</span><span class="n">y_true</span><span class="o">=</span><span class="n">df_y_real</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="n">y_pred</span><span class="o">=</span><span class="n">df_y_pred</span><span class="o">.</span><span class="n">values</span> <span class="o">&gt;</span> <span class="n">max_f1_thresh</span><span class="p">)</span>
     <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">({</span><span class="s1">&#39;accuracy&#39;</span> <span class="p">:</span> <span class="n">accuracy</span><span class="p">,</span>
-                    <span class="s1">&#39;fbeta_score&#39;</span> <span class="p">:</span> <span class="n">fbeta_score</span><span class="p">,</span>
-                    <span class="s1">&#39;roc_auc_score&#39;</span> <span class="p">:</span> <span class="n">roc_auc_score</span><span class="p">,</span>
+                    <span class="s1">&#39;res&#39;</span><span class="p">:</span> <span class="n">res</span><span class="p">,</span>
+                    <span class="s1">&#39;precisions&#39;</span> <span class="p">:</span> <span class="n">precision</span><span class="p">,</span>
+                    <span class="s1">&#39;recalls&#39;</span> <span class="p">:</span> <span class="n">recall</span><span class="p">,</span>
+                    <span class="s1">&#39;thresholds&#39;</span> <span class="p">:</span> <span class="n">thresholds</span><span class="p">,</span>
+                    <span class="s1">&#39;f1_scores&#39;</span> <span class="p">:</span> <span class="n">f1_scores</span><span class="p">,</span>
                     <span class="s1">&#39;max_f1_precision&#39;</span> <span class="p">:</span> <span class="n">max_f1_precision</span><span class="p">,</span>
                     <span class="s1">&#39;max_f1_recall&#39;</span> <span class="p">:</span> <span class="n">max_f1_recall</span><span class="p">,</span>
                     <span class="s1">&#39;max_f1_thresh&#39;</span> <span class="p">:</span> <span class="n">max_f1_thresh</span><span class="p">,</span>
@@ -14504,7 +14507,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[35]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[44]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">df_results</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">results</span><span class="p">)</span>
@@ -14518,7 +14521,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[36]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[56]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">df_results</span>
@@ -14537,7 +14540,7 @@ a.anchor-link {
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[36]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[56]:</div>
 
 
 
@@ -14561,8 +14564,11 @@ a.anchor-link {
     <tr style="text-align: right;">
       <th></th>
       <th>accuracy</th>
-      <th>fbeta_score</th>
-      <th>roc_auc_score</th>
+      <th>res</th>
+      <th>precisions</th>
+      <th>recalls</th>
+      <th>thresholds</th>
+      <th>f1_scores</th>
       <th>max_f1_precision</th>
       <th>max_f1_recall</th>
       <th>max_f1_thresh</th>
@@ -14572,53 +14578,68 @@ a.anchor-link {
   <tbody>
     <tr>
       <th>0</th>
-      <td>0.888889</td>
-      <td>fbeta</td>
-      <td>roc_auc</td>
-      <td>0.750000</td>
-      <td>0.923077</td>
-      <td>0.104162</td>
-      <td>0.827586</td>
+      <td>0.907407</td>
+      <td>{'loss': 0.2786172404885292, 'fbeta': 0.166666...</td>
+      <td>[0.29545454545454547, 0.27906976744186046, 0.2...</td>
+      <td>[1.0, 0.9230769230769231, 0.9230769230769231, ...</td>
+      <td>[0.09815139323472977, 0.09817229956388474, 0.0...</td>
+      <td>[0.456140350877193, 0.42857142857142855, 0.436...</td>
+      <td>0.909091</td>
+      <td>0.769231</td>
+      <td>0.146298</td>
+      <td>0.833333</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>0.867925</td>
-      <td>fbeta</td>
-      <td>roc_auc</td>
-      <td>0.900000</td>
-      <td>0.642857</td>
-      <td>0.123647</td>
-      <td>0.750000</td>
+      <td>0.905660</td>
+      <td>{'loss': 0.2968771643936634, 'fbeta': 0.188679...</td>
+      <td>[0.45161290322580644, 0.43333333333333335, 0.4...</td>
+      <td>[1.0, 0.9285714285714286, 0.9285714285714286, ...</td>
+      <td>[0.11933296173810959, 0.11936142295598984, 0.1...</td>
+      <td>[0.6222222222222222, 0.5909090909090909, 0.604...</td>
+      <td>0.916667</td>
+      <td>0.785714</td>
+      <td>0.205750</td>
+      <td>0.846154</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>0.867925</td>
-      <td>fbeta</td>
-      <td>roc_auc</td>
-      <td>0.769231</td>
-      <td>0.769231</td>
-      <td>0.841273</td>
-      <td>0.769231</td>
+      <td>0.698113</td>
+      <td>{'loss': 0.5070239007472992, 'fbeta': 0.132075...</td>
+      <td>[0.28888888888888886, 0.2727272727272727, 0.27...</td>
+      <td>[1.0, 0.9230769230769231, 0.9230769230769231, ...</td>
+      <td>[0.10440044850111008, 0.10448513180017471, 0.1...</td>
+      <td>[0.4482758620689655, 0.4210526315789473, 0.428...</td>
+      <td>0.458333</td>
+      <td>0.846154</td>
+      <td>0.118457</td>
+      <td>0.594595</td>
     </tr>
     <tr>
       <th>3</th>
-      <td>0.943396</td>
-      <td>fbeta</td>
-      <td>roc_auc</td>
-      <td>1.000000</td>
-      <td>0.777778</td>
-      <td>0.093471</td>
-      <td>0.875000</td>
+      <td>0.905660</td>
+      <td>{'loss': 0.25990851037204266, 'fbeta': 0.07547...</td>
+      <td>[0.42857142857142855, 0.4, 0.42105263157894735...</td>
+      <td>[1.0, 0.8888888888888888, 0.8888888888888888, ...</td>
+      <td>[0.08622341603040695, 0.08633860945701599, 0.0...</td>
+      <td>[0.6, 0.5517241379310346, 0.5714285714285714, ...</td>
+      <td>0.857143</td>
+      <td>0.666667</td>
+      <td>0.093429</td>
+      <td>0.750000</td>
     </tr>
     <tr>
       <th>4</th>
-      <td>0.867925</td>
-      <td>fbeta</td>
-      <td>roc_auc</td>
-      <td>0.555556</td>
-      <td>0.714286</td>
-      <td>0.403623</td>
-      <td>0.625000</td>
+      <td>0.849057</td>
+      <td>{'loss': 0.3114274591207504, 'fbeta': 0.037735...</td>
+      <td>[0.1590909090909091, 0.13953488372093023, 0.14...</td>
+      <td>[1.0, 0.8571428571428571, 0.8571428571428571, ...</td>
+      <td>[0.07898908853530884, 0.0789952203631401, 0.07...</td>
+      <td>[0.2745098039215686, 0.24, 0.24489795918367344...</td>
+      <td>0.500000</td>
+      <td>0.857143</td>
+      <td>0.083015</td>
+      <td>0.631579</td>
     </tr>
   </tbody>
 </table>
@@ -14634,13 +14655,70 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[55]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#check train set distributions</span>
+<span class="k">for</span> <span class="n">n</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">5</span><span class="p">):</span>
+    <span class="c1"># splitting Dataframe (dataset not included)</span>
+    <span class="n">val_file_name</span> <span class="o">=</span> <span class="s1">&#39;twt_val_set_&#39;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="mi">5</span><span class="o">-</span><span class="n">n</span><span class="p">)</span> <span class="o">+</span> <span class="s1">&#39;.csv&#39;</span>
+    <span class="n">train_file_name</span> <span class="o">=</span> <span class="s1">&#39;twt_train_set_&#39;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="mi">5</span><span class="o">-</span><span class="n">n</span><span class="p">)</span> <span class="o">+</span> <span class="s1">&#39;.csv&#39;</span>
+    <span class="n">df_val</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/&#39;</span> <span class="o">+</span> <span class="n">val_file_name</span><span class="p">)</span>
+    <span class="n">df_train</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;./data/&#39;</span> <span class="o">+</span> <span class="n">train_file_name</span><span class="p">)</span> 
+    <span class="nb">print</span><span class="p">(</span><span class="n">df_train</span><span class="o">.</span><span class="n">Observation</span><span class="o">.</span><span class="n">value_counts</span><span class="p">())</span>
+ <span class="c1">#   print(df_val.Observation.value_counts())</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+<div class="jp-Cell-outputWrapper">
+
+
+<div class="jp-OutputArea jp-Cell-outputArea">
+
+<div class="jp-OutputArea-child">
+
+    
+    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+
+
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
+<pre>0    169
+1     43
+Name: Observation, dtype: int64
+0    171
+1     42
+Name: Observation, dtype: int64
+0    170
+1     43
+Name: Observation, dtype: int64
+0    166
+1     47
+Name: Observation, dtype: int64
+0    164
+1     49
+Name: Observation, dtype: int64
+</pre>
+</div>
+</div>
+
+</div>
+
+</div>
+
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[11]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">val_set</span> <span class="o">=</span> <span class="n">df_tweets</span><span class="o">.</span><span class="n">sample</span><span class="p">(</span><span class="n">frac</span><span class="o">=</span><span class="mf">0.2</span><span class="p">,</span> <span class="n">replace</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">random_state</span><span class="o">=</span><span class="mi">42</span><span class="p">)</span>
 <span class="n">train_set</span> <span class="o">=</span><span class="n">df_tweets</span><span class="o">.</span><span class="n">drop</span><span class="p">(</span><span class="n">index</span> <span class="o">=</span> <span class="n">val_set</span><span class="o">.</span><span class="n">index</span><span class="p">)</span>
-<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Nombre de commentaires dans le val_set:&#39;</span><span class="p">,</span><span class="nb">len</span><span class="p">(</span><span class="n">val_set</span><span class="p">))</span>
-<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Nombre de commentaires dans le train_set:&#39;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">train_set</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Nombre de tweets dans le val_set:&#39;</span><span class="p">,</span><span class="nb">len</span><span class="p">(</span><span class="n">val_set</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Nombre de tweets dans le train_set:&#39;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">train_set</span><span class="p">))</span>
 <span class="n">val_set</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s1">&#39;./data/twt_val_set.csv&#39;</span><span class="p">)</span>
 <span class="n">train_set</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s1">&#39;./data/twt_train_set.csv&#39;</span><span class="p">)</span>
 </pre></div>
